Cleaning up on  Jaccard Similarity server and client (including README's): Unit tests now  seem to pass?
