# ncats/translator/ontology/server/openapi_server/model/computation_input.py
@@ -1,15 +1,13 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
 
-from typing import List, Dict  # noqa: F401
+from typing import List  # noqa: F401
 
-from openapi_server.model.base_model_ import Model
-from openapi_server.model.gene_entry import GeneEntry
 from openapi_server import util
-
+from openapi_server.model.base_model_ import Model
 from openapi_server.model.gene_entry import GeneEntry  # noqa: E501
+
 
 class ComputationInput(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -127,6 +125,8 @@ class ComputationInput(Model):
         :param lower_bound: The lower_bound of this ComputationInput.
         :type lower_bound: float
         """
+        if lower_bound is None:
+            raise ValueError("Invalid value for `lower_bound`, must not be `None`")  # noqa: E501
 
         self._lower_bound = lower_bound
 
